--- a/apps/eduteachers/src/styles/components/profile/contact.css
+++ b/apps/eduteachers/src/styles/components/profile/contact.css
@@ -255,7 +255,7 @@
 }
 
 .social-link {
-
+    color: var(--gray);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -267,7 +267,7 @@
 }
 
 .social-link:hover {
-    background-color: var(--light);
+    background-color: blue;
 }
 
 .social-link i {
