Global style and layout  tweaks and mockdata changing

--- a/apps/eduteachers/src/styles/components/profile/cv.css
+++ b/apps/eduteachers/src/styles/components/profile/cv.css
@@ -24,6 +24,11 @@
     gap: 2rem;
 }
 
+.cv-edit-fields {
+    display: flex;
+    margin: 10px;
+}
+
 .cv-item:last-child {
     margin-bottom: 0;
 }
