--- a/apps/eduteachers/src/styles/components/profile/profileHeader.css
+++ b/apps/eduteachers/src/styles/components/profile/profileHeader.css
@@ -9,6 +9,7 @@
     height: 30vh;
     min-height: 200px;
     background-size: cover;
+    border-bottom: 10px solid black;
     background-position: center;
 }
 
