--- a/packages/ui/src/styles/global.css
+++ b/packages/ui/src/styles/global.css
@@ -79,7 +79,7 @@ body {
     font-size: 1rem;
     line-height: var(--line-height-base);
     color: var(--dark);
-    background-image: url("https://images.unsplash.com/photo-1506744038136-46273834b3fb?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+    background-image: url("../../../../apps/eduguiders/src/assets/images/park.jpg");
     background-attachment: fixed;
     overflow-x: hidden;
 }
